--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MyTravelers"
         tools:targetApi="31">
+
         <activity
             android:name=".Activity.PrivacyPolicyActivity"
             android:exported="false" />
@@ -104,15 +105,14 @@
                 <data android:scheme="@string/fb_login_protocol_scheme" />
             </intent-filter>
         </activity>
-        
-        <service android:name=".Receive.FirebaseMessageReceiver"
-                    android:exported="false">
+
+        <service
+            android:name=".Receive.FirebaseMessageReceiver"
+            android:exported="false">
             <intent-filter>
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
-
         </service>
-        
     </application>
 
 </manifest>
